[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Abstract/Music/Music.gd" type="Script" id=1]
[ext_resource path="res://AudioFiles/UI_Sounds_Hovered.wav" type="AudioStream" id=2]
[ext_resource path="res://AudioFiles/GameMusic.ogg" type="AudioStream" id=3]
[ext_resource path="res://AudioFiles/TitleMusic.ogg" type="AudioStream" id=4]
[ext_resource path="res://AudioFiles/UI_Sounds_Selected.wav" type="AudioStream" id=5]
[ext_resource path="res://AudioFiles/DropWhistle.wav" type="AudioStream" id=6]
[ext_resource path="res://AudioFiles/LunarBastion_Explosion.wav" type="AudioStream" id=7]

[node name="Music" type="Node"]
script = ExtResource( 1 )

[node name="StartMusicTween" type="Tween" parent="."]

[node name="StopMusicTween" type="Tween" parent="."]

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[node name="UIHoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
pitch_scale = 0.8

[node name="UISelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="DropWhistleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
[connection signal="tween_completed" from="StopMusicTween" to="." method="_on_StopMusicTween_tween_completed"]
